# Rustos

./: .dockerignore  .gitignore  AGENTS.md  BOOT_RUSTOS.sh  BUGS_FIXED.md  BUG_REPORT.md  BUILD_STATUS.md  CLAUDE.md  CLEANUP_SUMMARY.md  Cargo.toml  Cargo_full.toml  Cargo_minimal.toml  Cargo_simple.toml  DESKTOP.md  DYNAMIC_LINKER_COMPLETION.md  Dockerfile  Dockerfile.macos  ELF_LOADER_INTEGRATION_SUMMARY.md  ELF_LOADER_QUICKREF.md  EXT4_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  LINUX_INTEGRATION_SUMMARY.md  Makefile  Makefile.docker  PR_DESCRIPTION.md  README.md  ROADMAP.md  SOCKET_SYSCALLS_IMPLEMENTATION.md  SYSCALL_IMPLEMENTATIONS.md  SYSCALL_IMPLEMENTATION_SUMMARY.md  USERMODE_IMPLEMENTATION.md  USERMODE_QUICKREF.md  USER_PROGRAM_EXECUTION.md  aarch64-apple-rustos.json  boot_config.txt  build.rs  (+8 more)
.cargo/: config.toml
claudedocs/: AHCI_DMA_STATUS.md  E1000_DMA_INTEGRATION.md  PLACEHOLDER_REMOVAL_STATUS.md  SESSION_2_3_COMPLETE.md  SESSION_2_CHANGES.md  SESSION_2_SUMMARY.md  SESSION_4_PARALLEL_CONVERSION.md  SESSION_5_PARALLEL_COMPLETION.md  SESSION_6_FINAL_COMPLETION.md  SESSION_COMPLETE_SUMMARY.md  documentation_improvements_report.md
codex/: ralph-log.md  ralph-loop.md  ralph-prompt.md  ralph-snapshot.md
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_SUCCESS_SUMMARY.md  DEBUGGING.md  DEEP_LINUX_INTEGRATION.md  DRIVER_GUIDE.md  DYNAMIC_LINKER_INTEGRATION.md  EXPERIMENTAL_PACKAGE_ADAPTERS.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_QUICKSTART.md  LINUX_APP_PROGRESS.md  LINUX_APP_SUPPORT.md  LINUX_COMPATIBILITY.md  MODULE_INDEX.md  PHASE_0_RESULTS.md  PHASE_1_RESULTS.md  PHASE_3_RESULTS.md  README.md  ROADMAP.md  RUSTOS_VS_LINUX.md  SAFETY.md  SIMULATION_TO_REAL_CODE_CONVERSION.md  SUBSYSTEMS.md  opensource_drivers.md  package_manager_integration.md  screenshot_viewer.html  screenshots.md
examples/: dynamic_linker_demo.rs  package_manager_demo.rs
scripts/: boot_smoke.sh  build_minimal.sh  (+18 more)
(+253 files in other folders)
